# causal-inference-case-study

./: README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 01_synthetic_control.ipynb
