[project]
name = "causal-inference-case-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "causalpy>=0.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
